--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.3",
+    "npm": "^6.4.1",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
   },
